// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module NOT Read-only Renders a card, with icon received from props 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(Module)
    addModule={[Function]}
    dropModule={[Function]}
    icon="add"
    id={88}
    isReadOnly={false}
    libraryOpen={true}
    name="Sweet Module"
    setOpenCategory={[Function]}
  >
    <Module
      addModule={[Function]}
      connectDragSource={[Function]}
      dropModule={[Function]}
      icon="add"
      id={88}
      isDragging={false}
      isReadOnly={false}
      libraryOpen={true}
      name="Sweet Module"
      setOpenCategory={[Function]}
    >
      <div
        className="card ml-module-card"
        onClick={[Function]}
      >
        <div
          className="second-level d-flex"
        >
          <div
            className="d-flex flex-row align-items-center"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-add ml-icon"
              />
            </div>
            <div>
              <div
                className="content-5 ml-module-name"
              >
                Sweet Module
              </div>
            </div>
          </div>
          <div
            className="ml-handle"
          >
            <div
              className="icon-grip"
            />
          </div>
        </div>
      </div>
    </Module>
  </DragSource(Module)>
</DragDropContextProvider>
`;

exports[`Module Read-only Renders a card, with icon received from props 1`] = `
<DragDropContextProvider
  backend={[Function]}
>
  <DragSource(Module)
    addModule={[Function]}
    dropModule={[Function]}
    icon="add"
    id={88}
    isReadOnly={true}
    libraryOpen={false}
    name="Sweet Module"
    setOpenCategory={[Function]}
  >
    <Module
      addModule={[Function]}
      connectDragSource={[Function]}
      dropModule={[Function]}
      icon="add"
      id={88}
      isDragging={false}
      isReadOnly={true}
      libraryOpen={false}
      name="Sweet Module"
      setOpenCategory={[Function]}
    >
      <div
        className="card ml-module-card"
        onClick={[Function]}
      >
        <div
          className="second-level d-flex"
        >
          <div
            className="d-flex flex-row align-items-center"
          >
            <div
              className="ml-icon-container"
            >
              <div
                className="icon-add ml-icon"
              />
            </div>
            <div>
              <div
                className="content-5 ml-module-name"
              >
                Sweet Module
              </div>
            </div>
          </div>
          <div
            className="ml-handle"
          >
            <div
              className="icon-grip"
            />
          </div>
        </div>
      </div>
    </Module>
  </DragSource(Module)>
</DragDropContextProvider>
`;
